gccida/c0/do_jump_by_parts_greater
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_greater/src/expr.c:10209:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( *( _WORD *)( *( _QWORD *)( exp->int_cst.int_cst.low + 8) + 60LL)) >> 1), 
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_greater/src/obj/expr.o] Error 1
